reg.css
*{
    margin: 0;
    padding: 0;
}
body{
    text-align: center;
    background-color: black;
}
.hide{
  display:none;
}

h1{
    text-align: center;
    font-family: Comic Sans MS;
    color: white;
    font-size: 80px;
    margin-bottom: 10px;
    margin-top: 5%;
}
h1::first-letter{
    color: orangered;
}
.radio input{
  margin: 3%;
}
.radio input:nth-child(1){
  margin-top: 2.5%;
}
.radio label{
  color: orangered;
  font-size: 17px;
  font-family: Tahoma;
}
h2{
    text-align: center;
    margin: 5%;
    color: white;
}
h2::first-letter{
    color: orangered;
} 
h3{
    text-align: center;
    color: orangered;
    margin-top: 2%;
    margin-bottom: -3%;
    font-family: Raleway;
}

t{
   margin: 2.5%;
}
span{
                
    color: orangered;
       
}

.ip input{
    width: 50%;
    border-radius: 5px;
    padding: 7px;
}

#regForm {
  background-color:#990033;
  margin: 100px auto;
  font-family: Raleway;
  padding: 30px;
  width: 70%;
  min-width: 300px;
}

input.invalid {
  background-color: #ffdddd;
}

/* Hide all steps by default: */
.tab {
  display: none;
}

button {
  background-color: orangered;
  color: #ffffff;
  border: none;
  padding: 10px 20px;
  font-size: 17px;
  font-family: Helvetica;
  cursor: pointer;
}

button:hover {
  opacity: 0.8;
}

#prevBtn {
  background-color:orangered;
}

/* Make circles that indicate the steps of the form: */
.step {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbbbbb;
  border: none;  
  border-radius: 50%;
  display: inline-block;
  opacity: 0.5;
}

.step.active {
  opacity: 0.8;
  background-color: orangered;
}

/* Mark the steps that are finished and valid: */
.step.finish {
  background-color: orangered;
}

